# kube-workspace

./: .gitignore  Cargo.toml  README.md  flake.nix  workspaces.py
.github/workflows/: ci.yml
cli/: README.md  setup.py
cli/kworkspace/: __init__.py
cli/kworkspaces/: __init__.py
deploy/: config.json  example-config-secret.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
deploy/helm/templates/tests/: test-connection.yaml
src/: client.rs  config.rs  main.rs  operator.rs  prometheus.rs  server.rs
src/operator/: mod.rs  operator.rs  types.rs
src/server/: api.rs  mod.rs
tests/fixtures/: values.yaml
tests/fixtures/ssh_keys/: key1  key1.pub
xtask/: Cargo.toml
xtask/src/: main.rs
