[package]
name = "kube-workspace-operator"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40", features = ["backtrace"] }
futures = "0.3.14"
http = "0.2.4"
tiny_http = "0.8.0"
k8s-openapi = { version = "0.11.0", features = ["v1_20", "api"], default-features = false }
kube = { version = "0.52.0", features = ["ws"]}
#kube = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.5.0", features = ["rt", "net", "time", "macros"] }
tracing = "0.1.25"
tracing-subscriber = { version = "0.2.17", features = ["fmt"] }
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
tracing-futures = "0.2.5"
warp = "0.3.1"
humantime-serde = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }

[workspace]
members = [
    "xtask",
]
