[package]
name = "kube-workspace-operator"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
futures = "0.3.19"
http = "0.2.6"
tiny_http = "0.10.0"
k8s-openapi = { version = "0.14.0", features = ["v1_20", "api"], default-features = false }
kube = { version = "0.67.0", features = ["ws"] }
#kube = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.15.0", features = ["rt", "net", "time", "macros"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["fmt"] }
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
tracing-futures = "0.2.5"
warp = "0.3.2"
humantime-serde = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }

[workspace]
members = [
    "xtask",
]
